Corrigindo bug dos subgrupos no cadastro

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SECRET_KEY=uma_chave_secreta_muito_dificil
 
 # --- MODO LOCAL ATIVADO (NUVEM DESLIGADA) ---
 # Colocamos a # abaixo para o sistema NÃO conectar na nuvem
-DATABASE_URL=postgresql://neondb_owner:npg_c8VImp5MaykH@ep-red-king-aem059gv-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
+#DATABASE_URL=postgresql://neondb_owner:npg_c8VImp5MaykH@ep-red-king-aem059gv-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
 
 # Configurações locais antigas
 # DB_HOST=localhost
